-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
None
-
PPC32 clients running 1.8.5-5chaos, x86_64 servers running https://github.com/chaos/lustre/commits/2.1.1-4chaos
-
2
-
4556
Our BG/P I/O Nodes (IONs, ppc32), which are lustre clients are hitting the following assertions now that they are talking to 2.1 servers:
mdc_fid.c:110:seq_client_rpc()) cli-srv-ls2-MDT0000-mdc-c1298800: Invalid range received from server:[0xffe959f603000000 - 0x00ea59f603000000) mdc_fid.c:154:seq_client_alloc_seq()) cli-srv-ls2-MDT0000-mdc-c1298800: Can't allocate new meta-sequence, rc -22 mdc_fid.c:193:seq_client_alloc_seq()) cli-srv-ls2-MDT0000-mdc-c1298800: Can't allocate new sequence, rc -22 mdc_locks.c:614:mdc_enqueue()) fid allocation result: -22 mdc_fix.c:148:seq_cleint_alloc_seq()) ASSERTION(range_is_sane(&seq->lcs_space)) failed
I had to transpose that by hand, so please forgive any typos. But I tried to get the range on the first line correct, because it looks fishy at first glance.
This is high priority, because a major user of our BG/P system is dead in the water until this is fixed.
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.2 to version 2.1.3 Server support for kernels: 2.6.18308.13.1.el5 (RHEL5) 2.6.32279.2.1.el6 (RHEL6) Client support for unpatched kernels: 2.6.18308.13.1.el5 (RHEL5) 2.6.32279.2.1....